# agent-ops

./: LICENSE  README.md  agent_architecture.md  demo.py  main.py  pyproject.toml  requirements.txt  tasks.md
config/: log_sources.yaml  system_config.json
docs/: architecture.md
log_monitoring/: log_generator.py  log_parser.py
src/: demo.py
src/agent_manager/: __init__.py  manager.py
src/agents/: __init__.py  admin_agent.py  base_agent.py  firefighter_agent.py  police_agent.py  security_agent.py
src/communication/: message_queue.py
src/log_pipeline/: __init__.py  analyzer.py  collector.py  processor.py
src/service_layer/: __init__.py  api_gateway.py  service_handlers.py
src/system/: __init__.py  config.py  system_controller.py
tests/: conftest.py  test_admin_agent.py  test_message_queue.py  test_response_agents.py  test_security_agent.py  test_system_integration.py
