[project]
name = "agent-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "metagpt>=0.1",
    "pytest>=7.2.2",
    "requests>=2.28.0",
    "rich>=13.9.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
